Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -179,8 +179,6 @@ Error message and password prompt
 
 <li>$:/state/sidebar</li>
 
-<li>$:/state/tab/sidebar--595412856</li>
-
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -493,7 +491,9 @@ Error message and password prompt
 
 <li>Scalable, transparent, and post-quantum secure computational integrity</li>
 
-<li>Search Strategies</li>
+<li>Search Strategies: Blind Search</li>
+
+<li>Search Strategies: Heuristic Search</li>
 
 <li>Semantics of Propositional Logic</li>
 
@@ -10071,11 +10071,8 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200413222211534" modified="20200414045503954" title="$:/state/sidebar" revision="10" bag="default">
+<div created="20200414172221755" modified="20200414185745099" title="$:/state/sidebar" revision="2" bag="default">
 <pre>yes</pre>
-</div>
-<div created="20200414035106208" modified="20200414035106208" title="$:/state/tab/sidebar--595412856" revision="1" bag="default">
-<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
@@ -10089,7 +10086,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200413221944954" list="" modified="20200414043526404" title="$:/StoryList" revision="83" bag="default">
+<div created="20200414170229923" list="" modified="20200414180313131" title="$:/StoryList" revision="51" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10150,7 +10147,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200413222104652" modified="20200413230408994" title="$:/temp/search" revision="14" bag="default">
+<div created="20200414170227915" modified="20200414172209716" title="$:/temp/search" revision="4" bag="default">
 <pre></pre>
 </div>
 <div created="20200227023745997" modified="20200227023751835" title="$:/theme" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -10422,7 +10419,7 @@ Natural Policy Gradient - parametrization independent
 Summary: https://imgur.com/JOMKK7m
 </pre>
 </div>
-<div created="20200413071459662" modified="20200414043524831" tags="[[computer networks]] [[UCLA CS 118 - Computer Network Fundamentals]]" title="Application Layer" type="text/vnd.tiddlywiki" revision="3" bag="default">
+<div created="20200413071459662" modified="20200414043525989" tags="[[computer networks]] [[UCLA CS 118 - Computer Network Fundamentals]]" title="Application Layer" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre># [[Principles of Network Applications]]
 # [[Web and HTTP]]
 # [[Electronic Mail (Email)]]
@@ -10670,7 +10667,7 @@ Properties of Graph Laplacian:
 * The second smallest eigenvalue of the Laplacian is called the algebraic connectivity of the network or the spectral gap
 </pre>
 </div>
-<div created="20200413230548400" modified="20200414004831587" tags="[[UCLA CS 267A - Probabilistic Programming]] [[artificial intelligence]]" title="Basics of Probabilistic Programming Languages" revision="6" bag="default">
+<div created="20200413230548400" modified="20200414004832685" tags="[[UCLA CS 267A - Probabilistic Programming]] [[artificial intelligence]]" title="Basics of Probabilistic Programming Languages" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Example program - https://imgur.com/93J8kJf
 
 * flip - flip a biased coin using random number generator
@@ -12077,7 +12074,7 @@ tbd
 <div author="" created="20191124064904814" modified="20191124064949779" tags="research probability math" title="Do Calculus" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://arxiv.org/pdf/1305.5506.pdf</pre>
 </div>
-<div created="20200413222312251" modified="20200414042538273" tags="[[Application Layer]] [[computer networks]]" title="Domain Name System (DNS)" revision="5" bag="default">
+<div created="20200413222312251" modified="20200414042539342" tags="[[Application Layer]] [[computer networks]]" title="Domain Name System (DNS)" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Translation from host name to IP address
 
 Why DNS? from human readable to machine readable
@@ -12136,7 +12133,7 @@ DNS protocol messages: https://imgur.com/Xxhf8FW, https://imgur.com/VQvylnz
 
 </pre>
 </div>
-<div created="20200413204659846" modified="20200413222226122" tags="[[Application Layer]] [[computer networks]]" title="Electronic Mail (Email)" type="text/vnd.tiddlywiki" revision="3" bag="default">
+<div created="20200413204659846" modified="20200413222227198" tags="[[Application Layer]] [[computer networks]]" title="Electronic Mail (Email)" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Two components:
 
 * user agents
@@ -14937,7 +14934,7 @@ ML in practice:
 <div created="20200227025649148" modified="20200227062101257" tags="[[machine learning]]" title="Overview of Supervised Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://stanford.edu/~shervine/teaching/cs-229/cheatsheet-supervised-learning</pre>
 </div>
-<div created="20200414042617937" modified="20200414043457492" tags="[[computer networks]] [[Application Layer]]" title="P2P Architecture" revision="2" bag="default">
+<div created="20200414042617937" modified="20200414043458586" tags="[[computer networks]] [[Application Layer]]" title="P2P Architecture" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Motivating example - https://imgur.com/YBgbfyM - time to distribute file from server to N clients
 
 * Client-Server Model - Server must sequentially send (upload) N file copies, time to send all copies: $$NF/u_s$$, client must download $$F/d_min$$, max time $$\geq max(NF/u_s), F/d_min$$
@@ -15247,14 +15244,14 @@ What transport service does an app need:
 * TCP - reliable, flow control - sender won't overwhelm receiver, congestion control - throttle sender when network overloaded, doesn't provide - timing minimum throughput guarantee, security; connection-oriented - setup required between client and server processes
 * UDP - unreliable but very fast - audio, video can tolerate some packet loss but delay must be very small, doesn't provide the things that TCP does - more flexibility at application layer for developers</pre>
 </div>
-<div created="20200407170824959" modified="20200409170412249" tags="[[artificial intelligence]] [[UCLA CS 161 - Fundamentals of Artificial Intelligence]]" title="Problem Solving using Search" type="text/vnd.tiddlywiki" revision="0" bag="default">
-<pre>__[[Formulating a problem as search]]__
+<div created="20200407170824959" modified="20200414180319835" tags="[[artificial intelligence]] [[UCLA CS 161 - Fundamentals of Artificial Intelligence]]" title="Problem Solving using Search" type="text/vnd.tiddlywiki" revision="6" bag="default">
+<pre># [[Formulating a problem as search]]
 
-{{Formulating a problem as search}}
+# [[Search Strategies: Blind Search]]
 
-__[[Search Strategies]]__
+# [[Search Strategies: Heuristic Search]]
 
-{{Search Strategies}}</pre>
+</pre>
 </div>
 <div created="20200212013035576" modified="20200212013205444" tags="[[reinforcement learning]] [[Introduction to Reinforcement Learning]]" title="Problems that RL needs to solve" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Two fundamental problems in sequential decision making:
@@ -15920,7 +15917,7 @@ Take proof statement: alpha is the result of executing C for T steps on public i
 First step construct an AIR:
 P = </pre>
 </div>
-<div created="20200409170400171" modified="20200409190734237" tags="[[artificial intelligence]] [[Problem Solving using Search]]" title="Search Strategies" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200409170400171" modified="20200414170527997" tags="[[artificial intelligence]] [[Problem Solving using Search]]" title="Search Strategies: Blind Search" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre>__Types of search strategies__
 
 * Uninformed / Blind - needs just the three things discussed in [[Formulating a problem as search]]
@@ -16000,6 +15997,112 @@ Iterative Deepening Search - https://imgur.com/fMgFMvX - many iterations of limi
 Search to depth d - number of nodes $$\approx b^d \frac{b}{b - 1}$$ - therefore iterative deepening = $$b^0 (\frac{b}{b - 1}) + b^1 (\frac{b}{b - 1}) + b^2 (\frac{b}{b - 1}) + ... + b^d (\frac{b}{b - 1}) = \frac{b}{b - 1}(1 + ... + b^d) = \frac{b}{b - 1} b^d \frac{b}{b - 1}$$
 
 Therefore additional cost is $$\frac{b}{b - 1}$$ which is in worst case of b = 2, = 2 but as $$b \rightarrow \infty, r \rightarrow 1$$ - so additional cost is not too bad since the last level dominates</pre>
+</div>
+<div created="20200414170605173" modified="20200414185728399" tags="[[Problem Solving using Search]] [[artificial intelligence]]" title="Search Strategies: Heuristic Search" revision="8" bag="default">
+<pre>Heuristic Search:
+
+* Initial State
+* Final State Predicate
+* Successor Function
+* Heuristic - new component in heuristic search - problem dependent - helps with efficiency
+
+__Uniform Cost Search (UCS)__
+
+* uninformed/blind
+* generalizes BFS
+* main difference from BFS is that in BFS we assumed that the action taken on every branch has equal cost, but here we assume the more general cost of an action &gt; 0
+* Strategy is expanding node on fringe with smallest  g(node) where $$g(n) :\equiv$$ defined as cost of actions on path from IS to n
+
+Consider map example: https://imgur.com/Emvem24
+
+Upon expanding S we get: https://imgur.com/52xvdJn
+
+And now here we must expand A as g(A) = 1 &lt; g(B), g(C): https://imgur.com/rQOgeXQ
+
+After which we expand B: https://imgur.com/MGayw2M
+
+And now we can see the node on the fringe with least cost is G on the path from B, and since it is a final state, we have reached a solution and it is guaranteed to be optimal
+
+Question: Why do we wait until expand to check if a state is a goal state instead of doing it when you generate? This examples shows why, if we had done that we would have gotten S - A - G which is suboptimal solution
+
+Search Tree - so only one path to every node but as seen in this example it is possible to have two nodes that have the same state, but are still very much distinct nodes with potentially different g value 
+
+# Complete: Since we examine nodes in increasing values of $$g(n)$$, if there is a solution, there is a node with goal state with finite $$g(n)$$ and we will reach it
+# Optimal: obvious since we examine nodes in increasing cost, so cheaper potential solutions explored first
+
+* $$\epsilon$$ be the smallest cost that any action
+* $$c*$$ be the cost of an optimal solution
+
+Therefore depth of optimal solution $$\leq \lceil \frac{c*}{\epsilon} \rceil$$
+
+# Time Complexity: $$O(b^{\lceil \frac{c*}{\epsilon} \rceil})$$
+# Space Complexity: $$O(b^{\lceil \frac{c*}{\epsilon} \rceil})$$
+
+__Greedy Search__
+
+Example: https://imgur.com/FPsWvim - we want a path from Arad to Bucharest - solution is kind of https://imgur.com/3LURI9V - follows paths that are not promising
+
+When choosing which node to pick after: from T, A and S - it is obvious to us that S is the best choice and this knowledge can be passed to the algorithm by giving it the straight line distance from a city to the goal state to understand 
+
+Heuristic: $$h(n)$$ = in this case defined as this straight line distance - a problem specific function
+
+Strategy: Pick node to expand by choosing node on fringe with lowest h-value
+
+$$h(n)$$ tries to estimate cost form state in node n to goal state
+
+admissible heuristic - a heuristic that doesn't overestimate the true cost to goal state i.e. $$h(n) \leq \text{ true optimal cost from node n to node with goal state}$$
+
+$$h_{SLD}$$ - the heuristic used here is admissible
+
+# Complete - No as it can get stuck as seen in this example - https://imgur.com/aRBtI4j
+# Optimal - No
+# Time Complexity - $$O(b^m)$$
+# Space Complexity - $$O(b^m)$$
+
+But average case time &amp; space complexity is much better
+
+Comparing UCS and Greedy:
+
+* UCS: g(n) - actual cost incurred to get to n - optimal, conservative, could be slow
+* Greedy: h(n) - estimate of cost to go from n to goal state - non-optimal, aggressive, could be fast
+
+https://imgur.com/dVe1JLu
+
+Hence we define $$f(n) = g(n) + h(n)$$ - this considers both parts of the cost - how much I paid to get here + how much I expect to get to the final state
+
+If h is admissible, then we get that $$f(n)$$ is a lower bound for total cost of a path to the goal state that goes through n 
+
+__A* Search__
+
+Search Strategy: choose node on fringe with lowest f-value
+
+Example of A* search: https://imgur.com/mtQrn4s
+
+Proving optimality: https://imgur.com/04pmwhD
+
+* Suffices to show that when both n and $$G_2$$ are on the fringe, we expand n
+* $$f(G_2) = g(G_2) + h(G_2) = g(G_2)$$ since h is admissible so $$h(goal state) = 0$$
+* $$f(n) = g(n) + h(n) \leq c*$$ since h is admissible and is a lower bound for the remaining cost to the solution
+
+We can trivially get an admissible heuristic by taking $$h(n) = 0$$, but this would reduce A* to UCS
+
+Consider the 8-puzzle problem
+
+Possible admissible heuristics:
+
+* h(s) = number of tiles not in right place
+* h(s) = manhattan distance to right position 
+
+Here the second heuristic dominates the first one as it always larger than it 
+
+How to evaluate a heuristic: Effective branching factor b*
+
+$$N = 1 + b* + ... + (b*)^d$$ - since we know d and N , we can solve for b* 
+
+So to evaluate a heuristic, we can fix d and compute b* for that value by starting at different initial states that are depth d away from the final solution
+
+Table evaluating heuristics and comparing to Iterative Deepening - https://imgur.com/2iwq4Vd
+</pre>
 </div>
 <div created="20200410175859133" modified="20200412182645222" tags="[[Propositional Logic]]" title="Semantics of Propositional Logic" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>__Semantics__
@@ -16997,10 +17100,11 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 <pre># [[Internet: A Brief Overview]]
 # [[Application Layer]]</pre>
 </div>
-<div created="20200402185643352" modified="20200407170813623" tags="ucla [[artificial intelligence]]" title="UCLA CS 161 - Fundamentals of Artificial Intelligence" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200402185643352" modified="20200414170311146" tags="ucla [[artificial intelligence]]" title="UCLA CS 161 - Fundamentals of Artificial Intelligence" type="text/vnd.tiddlywiki" revision="2" bag="default">
 <pre># [[Introduction to Artificial Intelligence]]
 # [[Introduction to Lisp]]
-# [[Problem Solving using Search]]</pre>
+# [[Problem Solving using Search]]
+</pre>
 </div>
 <div created="20200131000351410" modified="20200312211523121" tags="[[computer science]] ucla" title="UCLA CS 201 Winter 2020" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre># [[Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney]]
@@ -17020,7 +17124,7 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 <div created="20200212062244378" modified="20200219024018484" tags="[[artificial intelligence]] ucla [[bayesian networks]]" title="UCLA CS 262A Learning and Reasoning with Bayesian Networks" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre># [[Historical Perspective on AI]]</pre>
 </div>
-<div created="20200412210020323" modified="20200414001451546" tags="[[artificial intelligence]] ucla" title="UCLA CS 267A - Probabilistic Programming" type="text/vnd.tiddlywiki" revision="3" bag="default">
+<div created="20200412210020323" modified="20200414001452622" tags="[[artificial intelligence]] ucla" title="UCLA CS 267A - Probabilistic Programming" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre># [[Introduction to Probabilistic Programming]]
 # [[Propositional Reasoning]]
 # [[Propositional Probability]]
@@ -17136,7 +17240,7 @@ https://www.cs.ubc.ca/~poole/demos/mdp/vi.html - link to play around with value 
 
 Summary - https://imgur.com/kAutPIf</pre>
 </div>
-<div created="20200414043531641" modified="20200414045452229" tags="[[Application Layer]] [[computer networks]]" title="Video Streaming and Content Distribution Networks (CDNs)" revision="3" bag="default">
+<div created="20200414043531641" modified="20200414045453308" tags="[[Application Layer]] [[computer networks]]" title="Video Streaming and Content Distribution Networks (CDNs)" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Challenge is serving nearly 1B users and heterogeneity of users 
 
 Multimedia - can be efficiently encoded to utilize redundancy across frames or within frames - MPEG4 fairly compressed
