--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/sidebar</li>
+
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -548,6 +550,10 @@ Error message and password prompt
 <li>Things I want to learn about in 2020</li>
 
 <li>Topological Spaces</li>
+
+<li>Transport Layer</li>
+
+<li>Transport Layer Services</li>
 
 <li>UCLA CS 118 - Computer Network Fundamentals</li>
 
@@ -10082,6 +10088,9 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
+<div created="20200417155405790" modified="20200417160131178" title="$:/state/sidebar" revision="4" bag="default">
+<pre>yes</pre>
+</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -10094,7 +10103,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200417030340639" list="[[UCLA Math 114L - Mathematical Logic]] [[Propositional Logic]] [[Tautologies, Logical Equivalence and Logical Consequence]] [[Compactness of Propositional Logic]] Welcome" modified="20200417030429316" title="$:/StoryList" revision="7" bag="default">
+<div created="20200417155843639" list="[[Transport Layer Services]]" modified="20200417160139178" title="$:/StoryList" revision="25" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10155,7 +10164,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200417030338658" modified="20200417030710237" title="$:/temp/search" revision="5" bag="default">
+<div created="20200417155836183" modified="20200417160158291" title="$:/temp/search" revision="8" bag="default">
 <pre></pre>
 </div>
 <div created="20200227023745997" modified="20200414190048197" title="$:/theme" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -16747,7 +16756,7 @@ Misspellings and abbreviations:
 
 Def: $$\beta$$ is a proper initial part of $$\alpha$$ if there is a non-empty string $$\gamma$$ s.t. $$\alpha \equiv \beta \gamma$$</pre>
 </div>
-<div created="20200412182725484" modified="20200417030708508" tags="[[Propositional Logic]]" title="Tautologies, Logical Equivalence and Logical Consequence" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20200412182725484" modified="20200417030709701" tags="[[Propositional Logic]]" title="Tautologies, Logical Equivalence and Logical Consequence" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Def 5: A PL-formula $$\phi$$ is a tautology if $$v \models \phi$$ for all assignments $$v$$
 
 Example: $$(p \lor (\neg p))$$
@@ -17415,9 +17424,18 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 * [[Path Connectedness]]
 </pre>
 </div>
-<div created="20200409143404852" modified="20200413074753338" tags="[[computer networks]] [[computer science]] ucla" title="UCLA CS 118 - Computer Network Fundamentals" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200417155924595" modified="20200417160104302" tags="[[UCLA CS 118 - Computer Network Fundamentals]] [[computer networks]]" title="Transport Layer" revision="3" bag="default">
+<pre>Built for Application Layer to use and uses Network Layer itself. 
+
+# [[Transport Layer Services]]</pre>
+</div>
+<div created="20200417160127840" modified="20200417160150419" tags="[[Transport Layer]]" title="Transport Layer Services" type="text/vnd.tiddlywiki" revision="3" bag="default">
+<pre></pre>
+</div>
+<div created="20200409143404852" modified="20200417155912299" tags="[[computer networks]] [[computer science]] ucla" title="UCLA CS 118 - Computer Network Fundamentals" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre># [[Internet: A Brief Overview]]
-# [[Application Layer]]</pre>
+# [[Application Layer]]
+# [[Transport Layer]]</pre>
 </div>
 <div created="20200402185643352" modified="20200416170435404" tags="ucla [[artificial intelligence]]" title="UCLA CS 161 - Fundamentals of Artificial Intelligence" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre># [[Introduction to Artificial Intelligence]]
