--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@ Error message and password prompt
 
 <li>$:/state/sidebar</li>
 
+<li>$:/state/tab/sidebar--595412856</li>
+
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -291,6 +293,8 @@ Error message and password prompt
 
 <li>Domain Name System (DNS)</li>
 
+<li>Draft of 'Transport Layer Services'</li>
+
 <li>Electronic Mail (Email)</li>
 
 <li>Epidemics on Networks</li>
@@ -314,6 +318,8 @@ Error message and password prompt
 <li>February Learning List</li>
 
 <li>Finite Difference Policy Gradient</li>
+
+<li>First Order Logic</li>
 
 <li>For Every and There Exists</li>
 
@@ -470,6 +476,8 @@ Error message and password prompt
 <li>Policy Iteration</li>
 
 <li>Principles of Network Applications</li>
+
+<li>Principles of Reliable Data Transfer</li>
 
 <li>Probability Theory of Quantum Mechanics</li>
 
@@ -10092,8 +10100,11 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200417155405790" modified="20200417165305940" title="$:/state/sidebar" revision="12" bag="default">
+<div created="20200417155405790" modified="20200417202156008" title="$:/state/sidebar" revision="16" bag="default">
 <pre>yes</pre>
+</div>
+<div created="20200417165353346" modified="20200417165357871" title="$:/state/tab/sidebar--595412856" revision="2" bag="default">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
@@ -10107,7 +10118,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200417155843639" list="" modified="20200417165319856" title="$:/StoryList" revision="64" bag="default">
+<div created="20200417155843639" list="[[Principles of Reliable Data Transfer]]" modified="20200417194300119" title="$:/StoryList" revision="112" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10168,7 +10179,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200417155836183" modified="20200417165326235" title="$:/temp/search" revision="74" bag="default">
+<div created="20200417155836183" modified="20200417194248003" title="$:/temp/search" revision="103" bag="default">
 <pre></pre>
 </div>
 <div created="20200227023745997" modified="20200414190048197" title="$:/theme" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -12313,6 +12324,9 @@ DNS protocol messages: https://imgur.com/Xxhf8FW, https://imgur.com/VQvylnz
 
 </pre>
 </div>
+<div created="20200417160727705" modified="20200417160727705" title="Draft of 'Transport Layer Services'" type="text/vnd.tiddlywiki" revision="717" bag="default">
+<pre></pre>
+</div>
 <div created="20200413204659846" modified="20200413222227198" tags="[[Application Layer]] [[computer networks]]" title="Electronic Mail (Email)" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Two components:
 
@@ -12727,6 +12741,49 @@ Example: Training AIBO to walk by Finite Difference Policy Gradient (AIBO walk p
 
 
 </pre>
+</div>
+<div created="20200417165905555" modified="20200417180032969" tags="logic [[UCLA Math 114L - Mathematical Logic]]" title="First Order Logic" revision="8" bag="default">
+<pre>Also known as Lower Predicate Calculus with Identity (therefore object called LPCI)
+
+* In LPCI - individual variables - not stand-ins for propositions, range over the elements of a mathematical structure - what we are used to - e.g. let x be a real number
+
+Therefore $$v_i$$ sill be assigned to an element of some set A
+
+LPCI used to describe first-order structures
+
+A first order structure ''A'' is composed of, $$\textbf{A} = (A, ...)$$ :
+
+* An underlying set A (not in bold) - the only requirement is that it is non-empty - universe of a structure
+* Some (possibly empty) collection $$R_0, R_1, ...$$ of relations on A - needn't have the same arity, can have any arity
+* Some (possible empty) collection $$f_0, f_1, ...$$ of the form: $$f: A^n \rightarrow A$$ called an n-ary function of A, with the codomain being A - no restrictions again
+* Some (possibly empty) collection $$c_0, c_1, ...$$ of distinguished elements of the underlying set A - called the constants of the structure
+
+$$\textbf{A} = (A, R_0, R_1, ...., f_0, f_1, ...., c_0, c_1, ...)$$
+
+Example 0: Simplest type of structure is $$\textbf{A} = (A)$$ just an underlying set 
+
+Example 1: A graph $$G = (V, E)$$ is a structure with underlying set V and a binary relation $$E \subseteq V \times V$$ which is irreflexive and symmetric. Doesn't have any function or constants associated to the structure
+
+Example 2: Partial orderings - $$\textbf{P} = (P, \leq)$$ where $$\leq$$ is a binary relation on P which is reflexive, transitive and anti-symmetric.
+
+E.g. $$\textbf{P} = (N, |)$$ where $$|$$ represents divsibility
+
+Example 3: Linear ordering is $$\textbf{L} = (L, \leq)$$ where $$\leq$$ is a binary relation on L which is reflexive, transitive, anti-symmetric and ''total'' - every 2 elements of the set can be compared 
+
+E.g. $$(N, \leq)$$ where $$\leq$$ is the usual ordering
+
+Example 4: The structure of arithmetic
+
+$$\textbf{N} = (N, 0, S, +, \cdot)$$ - in logic, 0 is always part of the natural numbers
+
+* 0 is a constant
+* $$S: N \rightarrow N$$ - successor function, $$S(n) = n + 1$$
+* $$+ : N^2 \rightarrow N$$ - usual addition - use infix notation
+* $$\cdot : N^2 \rightarrow N$$ - usual addition - use infix notation
+
+Example 5: a Field: $$\textbf{K} = (K, 0, 1, +, \cdot) - 0$$ removed since groups require all elements to have inverses - https://imgur.com/7pV90de
+
+Example 6: A boolean algebra is a structure </pre>
 </div>
 <div created="20191227164059875" modified="20191227164351343" tags="math logic [[real analysis]]" title="For Every and There Exists" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>* Negation of a for every x, proposition is true is there exists x such that proposition is false
@@ -15607,6 +15664,34 @@ What transport service does an app need:
 * TCP - reliable, flow control - sender won't overwhelm receiver, congestion control - throttle sender when network overloaded, doesn't provide - timing minimum throughput guarantee, security; connection-oriented - setup required between client and server processes
 * UDP - unreliable but very fast - audio, video can tolerate some packet loss but delay must be very small, doesn't provide the things that TCP does - more flexibility at application layer for developers</pre>
 </div>
+<div created="20200417165450610" modified="20200417202143443" tags="[[Transport Layer]]" title="Principles of Reliable Data Transfer" revision="4" bag="default">
+<pre>How to send all segments from sender to receiver - need to implement a reliable channel over an unreliable channel - https://imgur.com/8UlS3we
+
+Consider only unidirectional data transfer - but control info will flow in both directions
+
+Will use a Finite State Machine to illustrate this - States, Events causing state transition, Action taken to affect the state transition
+
+Iteration 1: reliable transfer over a reliable channel
+
+
+Iteration 2: channel with bit errors
+
+* detect errors with checksum
+* acknowledgements (ACKs) - receiver explicitly tells sender that pkt received OK
+* negative acknowledgements (NAKs) - receiver explicitly tells sender that pkt has errors 
+* sender retransmits pkt on receipt of NAK
+
+this is the common case: typically errors don't occur in the  ACK, NAK since they are much smaller messages - but this case will also be dealt with 
+
+No errors: https://imgur.com/YluP5kN
+
+Packet with bit errors: https://imgur.com/1jcVTgc
+
+Finite State Machine for this: https://imgur.com/b8JfuFG
+
+But this mechanism cannot handle ACK/NAK being corrupted? Can't just retransmit because possible duplicate
+</pre>
+</div>
 <div created="20200415162452078" modified="20200415171830947" tags="[[quantum computing]] [[quantum mechanics]]" title="Probability Theory of Quantum Mechanics" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Classical probability theory has vectors representing the probabilities for n possibilities as such: $$(p_1, ..., p_N)$$ and our intuition tells us that these must sum to 1 and this is essentially the vector having unit length in the 1-norm. 
 
@@ -17487,10 +17572,11 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 * [[Path Connectedness]]
 </pre>
 </div>
-<div created="20200417155924595" modified="20200417163045281" tags="[[UCLA CS 118 - Computer Network Fundamentals]] [[computer networks]]" title="Transport Layer" revision="7" bag="default">
+<div created="20200417155924595" modified="20200417165443252" tags="[[UCLA CS 118 - Computer Network Fundamentals]] [[computer networks]]" title="Transport Layer" revision="9" bag="default">
 <pre># [[Transport Layer Services]]
 # [[Multiplexing and Demultiplexing]]
-# [[Connectionless Transport: UDP]]</pre>
+# [[Connectionless Transport: UDP]]
+# [[Principles of Reliable Data Transfer]]</pre>
 </div>
 <div created="20200417160127840" modified="20200417160746289" tags="[[Transport Layer]]" title="Transport Layer Services" type="text/vnd.tiddlywiki" revision="7" bag="default">
 <pre>Built for Application Layer to use and uses Network Layer itself. 
@@ -17515,7 +17601,7 @@ Two types of protocols:
 
 Neither provides delay or bandwidth guarantees</pre>
 </div>
-<div created="20200409143404852" modified="20200417155912299" tags="[[computer networks]] [[computer science]] ucla" title="UCLA CS 118 - Computer Network Fundamentals" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20200409143404852" modified="20200417194253235" tags="[[computer networks]] [[computer science]] ucla" title="UCLA CS 118 - Computer Network Fundamentals" type="text/vnd.tiddlywiki" revision="2" bag="default">
 <pre># [[Internet: A Brief Overview]]
 # [[Application Layer]]
 # [[Transport Layer]]</pre>
@@ -17581,9 +17667,10 @@ Neither provides delay or bandwidth guarantees</pre>
 <div created="20191121010859851" modified="20191121011220661" tags="" title="UCLA CS M282A - Cryptography 1" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
-<div created="20200405194525208" modified="20200415173653592" tags="math ucla" title="UCLA Math 114L - Mathematical Logic" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200405194525208" modified="20200417165859874" tags="math ucla" title="UCLA Math 114L - Mathematical Logic" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre># [[Introduction to Mathematical Logic]]
-# [[Propositional Logic]]</pre>
+# [[Propositional Logic]]
+# [[First Order Logic]]</pre>
 </div>
 <div author="Siddharth Joshi" created="20191120202501607" modified="20200115174134338" tags="incomplete math [[linear algebra]] ucla" title="UCLA Math 115A - Linear Algebra" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>!!! Syllabus
