--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/showeditpreview</li>
+
 <li>$:/state/sidebar</li>
 
 <li>$:/state/tab/sidebar--595412856</li>
@@ -212,6 +214,10 @@ Error message and password prompt
 <li>About Reinforcement Learning</li>
 
 <li>Actor-Critic Policy Gradient</li>
+
+<li>Algorithms: Bernstein-Vazirani</li>
+
+<li>Algorithms: Deutsh-Jozsa Algorithm</li>
 
 <li>Application Layer</li>
 
@@ -10100,11 +10106,14 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200417155405790" modified="20200417202156008" title="$:/state/sidebar" revision="16" bag="default">
+<div created="20200418060936438" modified="20200418060936438" title="$:/state/showeditpreview" revision="1" bag="default">
 <pre>yes</pre>
 </div>
-<div created="20200417165353346" modified="20200417165357871" title="$:/state/tab/sidebar--595412856" revision="2" bag="default">
-<pre>$:/core/ui/SideBar/Open</pre>
+<div created="20200417155405790" modified="20200418062534627" title="$:/state/sidebar" revision="26" bag="default">
+<pre>yes</pre>
+</div>
+<div created="20200417165353346" modified="20200418043945298" title="$:/state/tab/sidebar--595412856" revision="3" bag="default">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
@@ -10118,7 +10127,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200417155843639" list="[[Principles of Reliable Data Transfer]]" modified="20200417194300119" title="$:/StoryList" revision="112" bag="default">
+<div created="20200417155843639" list="[[Algorithms: Bernstein-Vazirani]]" modified="20200418062536505" title="$:/StoryList" revision="172" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10179,7 +10188,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200417155836183" modified="20200417194248003" title="$:/temp/search" revision="103" bag="default">
+<div created="20200417155836183" modified="20200418050444879" title="$:/temp/search" revision="107" bag="default">
 <pre></pre>
 </div>
 <div created="20200227023745997" modified="20200414190048197" title="$:/theme" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -10450,6 +10459,107 @@ Natural Policy Gradient - parametrization independent
 
 Summary: https://imgur.com/JOMKK7m
 </pre>
+</div>
+<div created="20200418061450580" modified="20200418062530588" tags="[[quantum computing]] [[UCLA CS 239 - Quantum Computation]]" title="Algorithms: Bernstein-Vazirani" revision="4" bag="default">
+<pre>Problem Definiton:
+
+* Input: $$f: \{0, 1\}^n \rightarrow \{0, 1\}$$ defined as $$f(x) = a \cdot x + b$$
+* Output $$a, b$$
+
+Classically takes $$n + 1$$ calls to the function - $$f(0..0)$$ to get b and then all the one-hot vectors i.e $$(10...0), (010...0)$$ xor-ed with b to get each bit of a
+
+In the quantum setting we can get away with just 2 (one done classically to get b and the other used in the quantum circuit to determine a)
+
+Note that if $$a = 0....0$$ f is constant else it is balanced and therefore we can use this algorithm to solve [[Algorithms: Deutsh-Jozsa Algorithm]]
+
+Algorithm:
+
+* Classical computation - run $$f(0...0)$$ to get b
+* Quantum circuit is same as [[Algorithms: Deutsh-Jozsa Algorithm]]</pre>
+</div>
+<div created="20200418045403116" modified="20200418061006746" tags="[[quantum computing]] [[UCLA CS 239 - Quantum Computation]]" title="Algorithms: Deutsh-Jozsa Algorithm" revision="11" bag="default">
+<pre>Deutsch-Jozsa Problem: 
+
+* Input: $$f: \{0, 1\}^n \rightarrow \{0, 1\}$$
+* f: constant if it always return 0 or always returns 1
+* f: balanced if it outputs 0 on half on the inputs and 1 on the rest
+* Output: 1 if f is constant, 0 is f is balanced
+
+Classical Solution: $$2^{n - 1}  + 1$$ queries
+
+Probabilistic Solution: $$k$$ queries - if always same then output constant else output balanced - probability of incorrect answer decreases exponentially in k
+
+Quantum Solution: 1 query
+
+Consider the case where n = 1 to begin with: $$f: \{0, 1\} \rightarrow \{0, 1\}$$ - but this is clearly not reversible
+
+To make it reversible, we can make $$U_f$$: 2 qubits  to 2  qubits, $$U_f |x\rangle |b\rangle \rightarrow |x\rangle |b \oplus f(x)\rangle$$
+
+Deutsch's Algorithm: https://imgur.com/ZZmnxoP
+
+Intuitively the Hadamards in the beginning in some sense create all the desired states with equal probability and then the $$U_f$$ applies the function and then the last Hadamard resolves things for us to inspect deterministically
+
+Lemma 1: $$\forall a \in \{0, 1\}: |0 \oplus a\rangle - |1 \oplus\rangle = -1^a (|0\rangle - |1\rangle)$$
+
+Lemma 2 (Phase Kickback Lemma): $$U_f |x\rangle |-\rangle = -1^{f(x)} |x\rangle |-\rangle$$
+
+Proof: 
+
+* $$U_f |x\rangle |-\rangle = \frac{1}{\sqrt{2}} (U_f|x\rangle |0\rangle - U_f |x\rangle |1\rangle)$$
+* $$ = \frac{1}{\sqrt{2}} (|x\rangle |0 \oplus f(x)\rangle - |x\rangle |1 \oplus f(x)\rangle)$$
+*  $$ = \frac{1}{\sqrt{2}} |x\rangle (|0 \oplus f(x)\rangle - |1 \oplus f(x)\rangle)$$
+* $$ = \frac{1}{\sqrt{2}} |x\rangle {(-1)}^{f(x)}(|0\rangle - |1\rangle)$$
+* $$ = \frac{1}{\sqrt{2}} |x\rangle {(-1)}^{f(x)}(|0\rangle - |1\rangle)$$
+* $$ =  {(-1)}^{f(x)} x\rangle |-\rangle$$
+
+Lemma 3: $$\forall a \in \{0, 1\}: H(\frac{1}{\sqrt{2}}(|0\rangle - {(-1)}^a |1\rangle))$$
+
+* If a = 0, we get $$H(|+\rangle) = |0\rangle$$
+* if a = 1, we get $$H(|-\rangle) = |1\rangle$$
+
+Thm 1: Deutsch's algorithm is correct
+
+Proof:
+
+* $$(H \otimes I) \cdot (U_f) \cdot (H \otimes H) |01\rangle$$
+* $$= (H \otimes I) \cdot (U_f) (|+\rangle \otimes |-\rangle)$$
+* $$ =(H \otimes I) \cdot (U_f) (\frac{1}{\sqrt{2}} (\sum_{x \in \{0, 1\}} |x\rangle) \otimes |-\rangle)$$
+* $$ =(H \otimes I) \cdot (U_f) (\frac{1}{\sqrt{2}} (\sum_{x \in \{0, 1\}} |x\rangle) \otimes |-\rangle)$$
+* By lemma 2, $$ =(H \otimes I) \cdot (\frac{1}{\sqrt{2}} (\sum_{x \in \{0, 1\}} (-1)^{f(x)} |x\rangle) \otimes |-\rangle)$$
+* $$ = (H \otimes I)\frac{1}{\sqrt{2}}  ((-1)^{f(0)} |0\rangle + (-1)^{f(1)} |0\rangle)$$
+* factor $$-1^{f(0)}$$ out, $$(H \otimes I)\frac{1}{\sqrt{2}}  (-1)^{f(0)} (|0\rangle + (-1)^{f(0) \oplus f(1)} |0\rangle)$$
+* But by lemma 3, Hadamard on first qubit, gives us $$f(0) \oplus f(1)$$ which if it is 0 - means constant, 1 - means balanced as $$f(0) \neq f(1)$$
+* So we get $$(-1)^{f(0)} (|f(0) \otimes f(1)\rangle) \otimes |-\rangle$$
+* What happens when we measure the first qubit, with probability 1 we get $$|f(0) \oplus f(1)\rangle$$ 
+
+May seem like f is called many times, but this is just an understanding what happens, in reality, f is called just once inside $$U_f$$
+
+Deutsch-Jozsa Algorithm - generalization to n bits: https://imgur.com/c6OhUMQ
+
+Lemma 5: $$\forall x \in \{0, 1\}: H|x\rangle = \frac{1}{\sqrt{2}} \sum_{y \in \{0, 1\}} {(-1)}^{x \cdot y} |y\rangle$$
+
+Lemma 6: $$\forall x \in \{0, 1\}^n: H|x\rangle = \frac{1}{\sqrt{2^n}} \sum_{y \in \{0, 1\}^n} {(-1)}^{x \cdot y} |y\rangle$$
+
+Proof: expand and repeated apply lemma 5 repeatedly
+
+Phase Kickback Lemma in general case is tricky but basically states that $$U_f \sum_{x \in \{0, 1\}^n} |x\rangle \otimes |-\rangle = (-1)^{f(x)} |x\rangle \otimes |-\rangle$$
+
+Thm 2: Deutsch-Jozsa Algorithm is correct
+
+Proof: https://imgur.com/epJ9gMT
+
+Amplitude of $$|00 ... 0-\rangle = \frac{1}{2^n} \sum_{x \in \{0, 1\}^n} {(-1)}^{f(x)}$$
+
+* $$ = 1 if f(x) = 0 \forall x$$
+* $$ = -1 f(x) = 1 \forall x$$
+
+Therefore if constant, this is the state with probability 1, anything else cancels out since amplitude cancels out (notice the $$(-1)^{x \cdot y \oplus f(x)}$$ term ) since half the times $$x \cdot y = 0$$ and half the time $$x \cdot y = 1$$, 
+
+When f is balanced though, $$\frac{1}{2^n} \sum_{x \in \{0, 1\}^n}{(-1)}^{f(x)} = 0$$ as $$f(x) = 0$$ on exactly half and $$f(x) = 1$$ on exactly half, so probability of getting $$|00...\rangle$$  = 0 if f is balanced 
+
+So we have deterministically that if we get $$|00 ....\rangle$$ f is constant, else it is balanced 
+
+In some sense, the quantum algorithm is able to try all combinations of $$|0\rangle$$ and $$|1\rangle$$ simultaneously</pre>
 </div>
 <div created="20200413071459662" modified="20200414043525989" tags="[[computer networks]] [[UCLA CS 118 - Computer Network Fundamentals]]" title="Application Layer" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre># [[Principles of Network Applications]]
@@ -12324,7 +12434,7 @@ DNS protocol messages: https://imgur.com/Xxhf8FW, https://imgur.com/VQvylnz
 
 </pre>
 </div>
-<div created="20200417160727705" modified="20200417160727705" title="Draft of 'Transport Layer Services'" type="text/vnd.tiddlywiki" revision="717" bag="default">
+<div created="20200417160727705" modified="20200417160727705" title="Draft of 'Transport Layer Services'" type="text/vnd.tiddlywiki" revision="718" bag="default">
 <pre></pre>
 </div>
 <div created="20200413204659846" modified="20200413222227198" tags="[[Application Layer]] [[computer networks]]" title="Electronic Mail (Email)" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -17623,11 +17733,13 @@ Neither provides delay or bandwidth guarantees</pre>
 # [[Recent Progress in Model-Based Learning by Csaba Szepesvari]]
 </pre>
 </div>
-<div created="20200408192944424" modified="20200415054917071" tags="ucla [[quantum computing]]" title="UCLA CS 239 - Quantum Computation" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200408192944424" modified="20200418061446215" tags="ucla [[quantum computing]]" title="UCLA CS 239 - Quantum Computation" type="text/vnd.tiddlywiki" revision="2" bag="default">
 <pre># [[Foundations of Quantum Computing: History and Overview]]
 # [[Foundations of Quantum Computing: Interface to Quantum Mechanics]]
 # [[Foundations of Quantum Computing: Linear Algebra]]
-# [[Foundations of Quantum Computing: Quantum Circuits]]</pre>
+# [[Foundations of Quantum Computing: Quantum Circuits]]
+# [[Algorithms: Deutsh-Jozsa Algorithm]] 
+# [[Algorithms: Bernstein-Vazirani]]</pre>
 </div>
 <div created="20200212062244378" modified="20200219024018484" tags="[[artificial intelligence]] ucla [[bayesian networks]]" title="UCLA CS 262A Learning and Reasoning with Bayesian Networks" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre># [[Historical Perspective on AI]]</pre>
