--- a/index.html
+++ b/index.html
@@ -169,8 +169,6 @@ Error message and password prompt
 
 <li>$:/GitHub/Username</li>
 
-<li>$:/Import</li>
-
 <li>$:/isEncrypted</li>
 
 <li>$:/plugins/tiddlywiki/highlight</li>
@@ -178,12 +176,6 @@ Error message and password prompt
 <li>$:/plugins/tiddlywiki/katex</li>
 
 <li>$:/SiteTitle</li>
-
-<li>$:/state/showeditpreview</li>
-
-<li>$:/state/sidebar</li>
-
-<li>$:/state/tab/sidebar--595412856</li>
 
 <li>$:/status/IsAnonymous</li>
 
@@ -196,8 +188,6 @@ Error message and password prompt
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
-
-<li>$:/temp/search</li>
 
 <li>$:/theme</li>
 
@@ -9867,16 +9857,6 @@ Error message and password prompt
 <div created="20191119192037438" modified="20191119192039472" title="$:/GitHub/Username" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>sjoshi804</pre>
 </div>
-<div plugin-type="import" status="pending" title="$:/Import" type="application/json" revision="2" bag="default">
-<pre>{
-    &quot;tiddlers&quot;: {
-        &quot;Untitled&quot;: {
-            &quot;title&quot;: &quot;Untitled&quot;,
-            &quot;text&quot;: &quot;https://imgur.com/tB9xHzI&quot;
-        }
-    }
-}</pre>
-</div>
 <div title="$:/isEncrypted" revision="0" bag="default">
 <pre>no</pre>
 </div>
@@ -10124,15 +10104,6 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200423220221041" modified="20200423220221041" title="$:/state/showeditpreview" revision="1" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200423220218344" modified="20200423231208368" title="$:/state/sidebar" revision="2" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200423215810466" modified="20200423215810466" title="$:/state/tab/sidebar--595412856" revision="1" bag="default">
-<pre>$:/core/ui/SideBar/Recent</pre>
-</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -10145,7 +10116,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200423215817612" list="[[Application Layer]]" modified="20200423230722335" title="$:/StoryList" revision="47" bag="default">
+<div list="Welcome" title="$:/StoryList" revision="1" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10205,9 +10176,6 @@ Error message and password prompt
         }
     }
 }</pre>
-</div>
-<div created="20200423215814190" modified="20200423215820273" title="$:/temp/search" revision="4" bag="default">
-<pre></pre>
 </div>
 <div created="20200227023745997" modified="20200414190048197" title="$:/theme" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>$:/themes/tiddlywiki/vanilla</pre>
@@ -12546,7 +12514,7 @@ DNS protocol messages: https://imgur.com/Xxhf8FW, https://imgur.com/VQvylnz
 
 </pre>
 </div>
-<div created="20200413204659846" modified="20200423225512151" tags="[[Application Layer]] [[computer networks]]" title="Electronic Mail (Email)" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20200413204659846" modified="20200423225513254" tags="[[Application Layer]] [[computer networks]]" title="Electronic Mail (Email)" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Two components:
 
 * user agents
@@ -13714,7 +13682,7 @@ __[[Simulation-Based Search]]__
 
 {{Simulation-Based Search}}</pre>
 </div>
-<div created="20200409143643694" modified="20200423221559387" tags="[[computer networks]] [[UCLA CS 118 - Computer Network Fundamentals]]" title="Internet: A Brief Overview" type="text/vnd.tiddlywiki" revision="2" bag="default">
+<div created="20200409143643694" modified="20200423221600491" tags="[[computer networks]] [[UCLA CS 118 - Computer Network Fundamentals]]" title="Internet: A Brief Overview" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>__What is the internet?__ - global information infrastructure
 
 * Can be subdivided into smaller subnetworks - North American Network, European Network and further subdivided within these by ISPs - all connected by high speed connections
@@ -15596,7 +15564,7 @@ ML in practice:
 <div created="20200227025649148" modified="20200227062101257" tags="[[machine learning]]" title="Overview of Supervised Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://stanford.edu/~shervine/teaching/cs-229/cheatsheet-supervised-learning</pre>
 </div>
-<div created="20200414042617937" modified="20200423231159056" tags="[[computer networks]] [[Application Layer]]" title="P2P Architecture" type="text/vnd.tiddlywiki" revision="3" bag="default">
+<div created="20200414042617937" modified="20200423231200143" tags="[[computer networks]] [[Application Layer]]" title="P2P Architecture" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Motivating example - https://imgur.com/YBgbfyM - time to distribute file from server to N clients
 
 * Client-Server Model - Server must sequentially send (upload) N file copies, time to send all copies: $$NF/u_s$$, client must download $$F/d_{min}$$, max time $$\geq max(NF/u_s, F/d_{min})$$
@@ -18115,7 +18083,7 @@ https://www.cs.ubc.ca/~poole/demos/mdp/vi.html - link to play around with value 
 
 Summary - https://imgur.com/kAutPIf</pre>
 </div>
-<div created="20200414043531641" modified="20200423231124902" tags="[[Application Layer]] [[computer networks]]" title="Video Streaming and Content Distribution Networks (CDNs)" type="text/vnd.tiddlywiki" revision="2" bag="default">
+<div created="20200414043531641" modified="20200423231125983" tags="[[Application Layer]] [[computer networks]]" title="Video Streaming and Content Distribution Networks (CDNs)" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Challenge is serving nearly 1B users and heterogeneity of users 
 
 Multimedia - can be efficiently encoded to utilize redundancy across frames or within frames - MPEG4 fairly compressed
@@ -18153,7 +18121,7 @@ Example - https://imgur.com/lC4ISLz
 # Local DNS replies with resolution to DNS query
 # Connection established with King CDN and then use DASH to stream</pre>
 </div>
-<div created="20200413074727373" modified="20200423225408024" tags="[[computer networks]] [[Application Layer]]" title="Web and HTTP" type="text/vnd.tiddlywiki" revision="3" bag="default">
+<div created="20200413074727373" modified="20200423225409130" tags="[[computer networks]] [[Application Layer]]" title="Web and HTTP" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Most popular application on the internet
 
 * Content - webpages
